# nano-arpes-browser

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
src/: __init__.py
src/core/: models.py
src/core/io/: __init__.py  exporters.py  loaders.py
src/core/processing/: __init__.py  kspace.py
src/gui/: __init__.py  app.py  main_window.py
src/gui/widgets/: __init__.py  arpes_viewer.py  control_panels.py  spatial_viewer.py
src/nano_arpes_browser/: __init__.py
src/nano_arpes_browser/core/: __init__.py  models.py
src/nano_arpes_browser/core/io/: __init__.py  exporters.py  loaders.py
src/nano_arpes_browser/core/processing/: __init__.py  kspace.py
src/nano_arpes_browser/gui/: __init__.py  app.py  main_window.py  qt_bootstrap.py  styles.py
src/nano_arpes_browser/gui/widgets/: __init__.py  arpes_viewer.py  control_panels.py  spatial_viewer.py
tests/test_core/: test_models.py
tests/test_gui/: test_kspace.py
