[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-arpes-browser"
version = "0.1.0"
description = "Professional nano-ARPES data browser and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Boris Senkovskiy", email = "***@***.com"}
]
keywords = ["ARPES", "nano-ARPES", "photoemission", "spectroscopy", "synchrotron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "pydantic>=2.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pyinstaller>=6.0",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
nano-arpes-browser = "nano_arpes_browser.gui.app:main"

# ============================================================================
# Setuptools Configuration
# ============================================================================
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nano_arpes_browser = ["*.ui", "resources/*"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]
"**/__init__.py" = ["F401"]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
