[project]
name = "nano-arpes-browser"
version = "0.1.0"
description = "nano-ARPES data browser and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Boris Senkovskiy", email = "81705695+senkovskiy@users.noreply.github.com"}
]
keywords = ["ARPES", "nano-ARPES", "micro-ARPES", "photoemission", "spectroscopy", "synchrotron", "Soleil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/senkovskiy/nano-arpes-browser"
Documentation = "https://github.com/senkovskiy/nano-arpes-browser#readme"
Repository = "https://github.com/senkovskiy/nano-arpes-browser"
Issues = "https://github.com/senkovskiy/nano-arpes-browser/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
nano-arpes-browser = "src.gui.app:main"

# ============================================================================
# Setuptools Configuration
# ============================================================================
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
src = ["*.ui", "resources/*"]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.2",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "pyinstaller>=6.0",
    "pre-commit>=3.0",
    "build>=1.4.0",
    "twine>=6.2.0",
]
